# math_tool

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  math_tool.code-workspace
JUCE/cmake-build/: CMakeCache.txt
JUCE/cmake-build/extras/AudioPerformanceTest/AudioPerformanceTest_artefacts/JuceLibraryCode/: Info.txt
JUCE/cmake-build/extras/AudioPluginHost/AudioPluginHost_artefacts/JuceLibraryCode/: Info.txt
JUCE/cmake-build/tools/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  JUCE.sln  JUCEConfigVersion.cmake  JUCEExportConfig.cmake  JUCEToolsExport.cmake  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  juce_lv2_helper.vcxproj  juce_lv2_helper.vcxproj.filters
JUCE/cmake-build/tools/juce_lv2_helper.dir/Debug/: juce_lv2_helper.exe.recipe  juce_lv2_helper.ilk
JUCE/cmake-build/tools/juce_lv2_helper.dir/Debug/juce_lv2_helper.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  juce_lv2_helper.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
JUCE/cmake-build/tools/modules/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
JUCE/cmake-build/tools/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
JUCE/cmake-build/tools/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
JUCE/cmake-build/tools/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
src/: MainComponent.cpp  MainComponent.h  main.cpp  trace.cpp  trace.hpp
(+3 files in other folders)
